force-app/main/default/objects/BigMachines__Field_Mapping__c/BigMachines__Field_Mapping__c.object-meta.xml
<CustomObject>
    <description>An object used to associate a field in Oracle CPQ Cloud to a field in Salesforce.</description>
    <label>Field Mapping</label>
    <nameField>
        <displayFormat>MAP-{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Oracle CPQ Cloud Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>