force-app/main/default/objects/BigMachines__Field_Mapping__c/fields/BigMachines__Object_Mapping__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Object_Mapping__c</fullName>
    <label>Object Mapping</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote -&gt; Opportunity</fullName>
                <default>true</default>
                <label>Quote -&gt; Opportunity</label>
            </value>
            <value>
                <fullName>Quote Product -&gt; Opportunity Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>