force-app/main/default/objects/BigMachines__Field_Mapping__c/fields/BigMachines__Source_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Source_Field_Label__c</fullName>
    <label>Source Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>