force-app/main/default/objects/BigMachines__Field_Mapping__c/fields/BigMachines__Source_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Source_Field_Name__c</fullName>
    <label>Source Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>