force-app/main/default/objects/BigMachines__Field_Mapping__c/recordTypes/BigMachines__Standard.recordType-meta.xml
<RecordType>
    <fullName>BigMachines__Standard</fullName>
    <active>true</active>
    <label>Standard</label>
</RecordType>