force-app/main/default/objects/BigMachines__Field_Mapping__c/validationRules/BigMachines__Object_Mapping_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>BigMachines__Object_Mapping_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( BigMachines__Object_Mapping__c , &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>BigMachines__Object_Mapping__c</errorDisplayField>
    <errorMessage>You may not select &quot;None&quot; for the value of Object Mapping</errorMessage>
</ValidationRule>